Fixed alignment of legacy datalist select all checkbox placement

--- a/src/grid.scss
+++ b/src/grid.scss
@@ -78,7 +78,7 @@
 }
 
 .d_dg_ac {
-	padding: px-to-base-rem(4) px-to-base-rem(10);
+	padding: px-to-base-rem(10) px-to-base-rem(30);
 }
 
 .d_dg_ps {
